[build-system]
requires = [
    "setuptools>=80.9",
    "wheel",
    "python-dotenv",
    "tavily-python"
]
build-backend = "setuptools.build_meta"

[project]
name = "bbdtls"
version = "0.1.0"
description = "A set of daily used tools"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "fbbmore", email = "fbbyqsyea@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
keywords = ["daily", "tools"]

[project.urls]
Homepage = "https://github.com/fbbyqsyea/bbdtls"
Repository = "https://github.com/fbbyqsyea/bbdtls"

[project.optional-dependencies]
dev = [
    "setuptools", 
    "wheel", 
    "twine", 
    "pytest", 
    "pytest-cov", 
] # Development dependencies pip install -e .[dev]
test = [
    "setuptools", 
    "wheel", 
    "twine", 
    "pytest", 
    "pytest-cov", 
] # Testing dependencies pip install -e .[test]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"